[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/MainMenu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/ExperimenterScenes.gd" type="Script" id=3]
[ext_resource path="res://scenes/IslanderScenes.gd" type="Script" id=4]
[ext_resource path="res://scenes/MainMenu/Credits.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/MainMenu/Settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/PauseMenu/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/MainMenu/LoadingScreen.tscn" type="PackedScene" id=9]

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="IslanderScenes" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Day1" parent="IslanderScenes" instance_placeholder="res://scenes/Levels/Islander/Day1/Day1.tscn"]

[node name="Day2" parent="IslanderScenes" instance_placeholder="res://scenes/Levels/Islander/Day2/Day2.tscn"]

[node name="Day3" parent="IslanderScenes" instance_placeholder="res://scenes/Levels/Islander/Day3/Day3.tscn"]

[node name="Day4" parent="IslanderScenes" instance_placeholder="res://scenes/Levels/Islander/Day4/Day4.tscn"]

[node name="ExperimenterScenes" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Intro" parent="ExperimenterScenes" instance_placeholder="res://scenes/Levels/Experimenter/Intro/Intro.tscn"]

[node name="Day1" parent="ExperimenterScenes" instance_placeholder="res://scenes/Levels/Experimenter/Day1/Day1.tscn"]

[node name="Night1" parent="ExperimenterScenes" instance_placeholder="res://scenes/Levels/Experimenter/Night1/Night1.tscn"]

[node name="Day2" parent="ExperimenterScenes" instance_placeholder="res://scenes/Levels/Experimenter/Day2/Day2.tscn"]

[node name="Night2" parent="ExperimenterScenes" instance_placeholder="res://scenes/Levels/Experimenter/Night2/Night2.tscn"]

[node name="Day3" parent="ExperimenterScenes" instance_placeholder="res://scenes/Levels/Experimenter/Day3/Day3.tscn"]

[node name="Night3" parent="ExperimenterScenes" instance_placeholder="res://scenes/Levels/Experimenter/Night3/Night3.tscn"]

[node name="Day4" parent="ExperimenterScenes" instance_placeholder="res://scenes/Levels/Experimenter/Day4/Day4.tscn"]

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="Credits" parent="MainMenu" groups=["MainMenuScreen"] instance=ExtResource( 5 )]

[node name="Settings" parent="MainMenu" groups=["MainMenuScreen"] instance=ExtResource( 6 )]

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]

[node name="LoadingScreen" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="finish_scenes" from="IslanderScenes" to="." method="_on_IslanderScenes_finish_scenes"]
[connection signal="scene_loaded" from="IslanderScenes" to="." method="_on_IslanderScenes_scene_loaded"]
[connection signal="finish_scenes" from="ExperimenterScenes" to="." method="_on_ExperimenterScenes_finish_scenes"]
[connection signal="scene_loaded" from="ExperimenterScenes" to="." method="_on_ExperimenterScenes_scene_loaded"]
[connection signal="finish_scene" from="MainMenu/Credits" to="." method="_on_Credits_finish_scene"]
[connection signal="finish_scene" from="MainMenu/Settings" to="." method="_on_Settings_finish_scene"]
